java 버전 변경에 따른 메소드 변경