@@ -1,23 +1,24 @@
 package test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public class Test {
     public static void main(String[] args) {
-//        Integer[] integer = new Integer[]{5, 2, 1, 4, 3};
-//        List<Integer> arr = new ArrayList<>( List.of( integer ) );
-//
-//        List<Integer> collect = arr.stream()
-//                .collect( ArrayList::new,
-//                        (list, i) -> list.add( 0, i ),
-//                        (result, input) -> result.addAll( 0, input ) );
-//
-//        System.out.println( "collect = " + collect );
-//
-//        Collections.reverse( arr );
-//
-//        System.out.println( "arr = " + arr );
+        Integer[] integer = new Integer[]{5, 2, 1, 4, 3};
+        List<Integer> arr = new ArrayList<>( Arrays.asList( integer ) );
+
+        List<Integer> collect = arr.stream()
+                .collect( ArrayList::new,
+                        (list, i) -> list.add( 0, i ),
+                        (result, input) -> result.addAll( 0, input ) );
+
+        System.out.println( "collect = " + collect );
+
+        Collections.reverse( arr );
+
+        System.out.println( "arr = " + arr );
     }
 }
